[gd_scene load_steps=19 format=2]

[ext_resource path="res://assets/sprites/personaje1.png" type="Texture" id=1]
[ext_resource path="res://scripts/victory.gd" type="Script" id=2]
[ext_resource path="res://fuentetexto.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/sprites/boton.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/level 3/Capitulaci√≥nAyacucho.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/buttons/viajaralpasado.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/level 3/Independencia.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/level 3/muerteBolivar.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/level 3/aniversario.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/level 3/indepen.png" type="Texture" id=10]

[sub_resource type="Animation" id=1]
resource_name = "background"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect5:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 812.414, 236.454 ), Vector2( 11.51, 13.536 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextureRect4:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -333.107, 203.05 ), Vector2( 433.092, 18.842 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TextureRect7:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 822.599, 4.60481 ), Vector2( 33.7088, 218.179 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("TextureRect6:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1.5, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -336.472, 6.35703 ), Vector2( 460, 253.302 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("TextureRect3:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 2, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 272.512, -238.326 ), Vector2( 257.393, 109.412 ) ]
}

[sub_resource type="Animation" id=2]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 749.718, 446.695 ), Vector2( 755, 446.695 ) ]
}

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="Animation" id=8]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 129, 41 ), Vector2( 129, 50 ), Vector2( 129, 55 ), Vector2( 138, 55 ) ]
}

[node name="victory" type="Control"]
pause_mode = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect3" type="ColorRect" parent="."]
margin_right = 800.0
margin_bottom = 500.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect5" type="TextureRect" parent="ColorRect3"]
margin_left = 812.414
margin_top = 236.454
margin_right = 1547.42
margin_bottom = 726.455
rect_scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect4" type="TextureRect" parent="ColorRect3"]
margin_left = -333.107
margin_top = 203.05
margin_right = -142.107
margin_bottom = 333.05
rect_scale = Vector2( 1.7, 1.7 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect7" type="TextureRect" parent="ColorRect3"]
margin_left = 822.599
margin_top = 4.60481
margin_right = 1809.6
margin_bottom = 533.605
rect_scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect6" type="TextureRect" parent="ColorRect3"]
margin_left = -336.472
margin_top = 6.35703
margin_right = 303.529
margin_bottom = 406.358
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect3" type="TextureRect" parent="ColorRect3"]
margin_left = 272.512
margin_top = -238.326
margin_right = 1072.51
margin_bottom = 469.674
rect_scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="ColorRect3"]
autoplay = "background"
anims/background = SubResource( 1 )

[node name="TextureRect2" type="TextureRect" parent="."]
margin_left = 28.0
margin_top = 254.017
margin_right = 111.0
margin_bottom = 394.017
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 390.0
margin_right = 780.0
margin_bottom = 480.0
color = Color( 0.576471, 0.690196, 0.756863, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 28.0
margin_top = 375.775
margin_right = 111.0
margin_bottom = 402.775
color = Color( 0.0980392, 0.137255, 0.223529, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 28.0
margin_top = 382.693
margin_right = 111.0
margin_bottom = 396.693
text = "Name"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="descripcion" type="Label" parent="."]
margin_left = 30.0
margin_top = 412.685
margin_right = 770.0
margin_bottom = 456.685
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="next" type="TextureRect" parent="."]
visible = false
anchor_left = 0.97
anchor_top = 0.949
anchor_right = 0.97
anchor_bottom = 0.949
margin_left = 749.718
margin_top = 446.695
margin_right = 775.718
margin_bottom = 474.695
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="next"]
autoplay = "texto"
anims/texto = SubResource( 2 )

[node name="Button" type="Button" parent="."]
visible = false
margin_left = 336.0
margin_top = 450.0
margin_right = 465.0
margin_bottom = 491.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
icon = ExtResource( 6 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -55.5
margin_top = -7.5
margin_right = 58.5
margin_bottom = 10.5
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "CERRAR JUEGO"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Button"]
autoplay = "button"
anims/button = SubResource( 8 )
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
